kubernetes/infrastructure/controllers/minio/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: MinIO
    gethomepage.dev/group: Storage
    gethomepage.dev/icon: minio.png
    gethomepage.dev/href: https://minio.syslabs.dev
    gethomepage.dev/description: S3 object storage console
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.syslabs.dev`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
      services:
        - name: minio-minio-console
          port: 9001
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-s3
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.syslabs.dev`)
      kind: Rule
      services:
        - name: minio-minio
          port: 9000
  tls: {}
